# lebenskraftwerk-scraper

./: .gitignore  README.md  compactify.py  failed.json  get_remaining.py  lessons.json  pyproject.toml  remaining.json  scrapy.cfg  streamlink.py  test.py
lebenskraftwerk/: helpers.py  items.py  middlewares.py  pipelines.py  settings.py
lebenskraftwerk/spiders/: course_videos.py
libs/: get_remaining.py  models.py  test.py  to_md.py  transcript_generator.py
