[tool.poetry]
name = "lebenskraftwerk-scraper"
version = "0.1.0"
description = ""
authors = ["Stevan Vlajic <91951603+stevan06v@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.13.3"
playwright = "^1.55.0"
scrapy-playwright = "^0.0.44"
scrapy-cloudflare-middleware = "^0.0.1"
pydantic = "^2.12.0"
vimeodlpy = "^0.1.0"
yt-dlp = "^2025.9.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
